--- a/main.css
+++ b/main.css
@@ -6,7 +6,10 @@ body {
 }
 
 header img {
-    width: 100%;
+    width: 92%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Navigation */
@@ -46,20 +49,23 @@ ul {
   }
   
   .navbar a {
-    float: right;
+    float: left;
     font-size: 1.2rem;
     color: #00416D;
     font-weight: bold;
     /*padding: 5%;*/
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 100px;
+    padding-left: 45px;
+    
     text-decoration: none;
     /*margin-right: 5%;*/
   }
   
   .dropdown {
     overflow: hidden;
-    float: right;
+    float: left;
     margin-right:10%;
   }
   
@@ -164,7 +170,7 @@ ul {
 
 .volunteertitle {
     margin-left: 5%;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .volunteerform {
@@ -212,7 +218,6 @@ label {
 
 .contacttitle {
     margin-left: 5%;
-    margin-top: 3%;
 }
 
 .contactform {
@@ -256,7 +261,6 @@ label {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
-    margin-top: 2%;
 }
 
 /* Newsletter */
